--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   background: rgb(100, 100, 100);
   color: white;
   font-size: 0.85rem;
-  padding: 1px 10px;
+  padding: 2px 10px 1px;
   margin: 3px 2px;
   border-radius: 20px;
   cursor: default;
